force-app/main/default/objects/System_Change__c/fields/Code_Changes__c.field-meta.xml
<CustomField>
    <fullName>Code_Changes__c</fullName>
    <inlineHelpText>Please note any code changes that took place.</inlineHelpText>
    <label>Code Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>