force-app/main/default/objects/System_Change__c/fields/Description_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Request__c</fullName>
    <inlineHelpText>Please describe the request.</inlineHelpText>
    <label>Description of Request</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>