force-app/main/default/objects/System_Change__c/fields/End_User_Instructions__c.field-meta.xml
<CustomField>
    <fullName>End_User_Instructions__c</fullName>
    <inlineHelpText>Enter any information end users need to learn how to use the new functionality/change.</inlineHelpText>
    <label>End User Instructions</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>